src/test/deca/syntax/valid/created/greaterthan.deca
{
	int a = 2;
	int b = 5;
	a >= b;
}
