src/test/deca/syntax/invalid/created/div-zero.deca
{
	int a = 5;
	a = a / 0;
}
